task: minor tweak

--- a/config/.config/hypr/hypr_conf/execs.conf
+++ b/config/.config/hypr/hypr_conf/execs.conf
@@ -26,29 +26,32 @@ exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISP
 exec-once = dbus-update-activation-environment --all
 
 # [Idle inhibit when audio playing]
-exec-once = sway-audio-idle-inhibit --ignore-source-outputs cava
+# exec-once = sway-audio-idle-inhibit --ignore-source-outputs cava
 
-# --------------
-# Notifications
-# --------------
-exec-once = waybar
+# --------------------------
+#  [Notifications] [ Bar ] 
+# --------------------------
+# exec-once = waybar
+# exec-once = dunst
 
-# --------------------
-#  Clipboard: history 
-# --------------------
+# ------------------------
+#  [Clipboard: history] 
+# ------------------------
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 
-# [Cursor] 
-exec-once = hyprctl setcursor Bibata-Modern-Ice 35
+# -------------
+#   [Cursor] 
+# -------------
+exec-once = hyprctl setcursor Bibata-Modern-Ice 34
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
+exec-once = gsettings set org.gnome.desktop.interface cursor-size 34
 
 # ------------
 #  Wallpapers
 # ------------
-exec-once = swww-daemon --format xrgb 
-# exec = pkill swww && swww-daemon --format xrgb 
-# exec-once = hyprpaper
+exec-once = hyprpaper
+# exec-once = swww-daemon --format xrgb 
 
 #------------
 #  Keyboard
