--- a/config/.config/hypr/hypr_conf/keybinds.conf
+++ b/config/.config/hypr/hypr_conf/keybinds.conf
@@ -1,6 +1,3 @@
-##!keybinds
-
-
 # ----------------------------------------
 #  _  __          _     _           _     
 # | |/ /___ _   _| |__ (_)_ __   __| |___ 
@@ -15,12 +12,10 @@ $menu=~/.local/bin/menu.sh
 $help=~/.local/bin/keybinds.sh
 $hist=cliphist list | rofi -dmenu -theme ~/.config/rofi/styles/clipboard.rasi | cliphist decode | wl-copy
 
-$inc=~/.local/bin/brightness.sh --inc
-$dec=~/.local/bin/brightness.sh --dec
-
 $volCTRL = ~/.local/bin/volumecontrol.sh
 
-$wall_select=~/.local/bin/wall_select.sh
+# $wall_select=~/.local/bin/wall_select.sh
+# $wall_select=~/.local/bin/wall_scripts/
 
 
 ####################
@@ -82,13 +77,11 @@ bind = SUPER SHIFT, T, exec, $theme_select
 bindd = Alt, Print, Record screen (with sound), exec, ~/.local/bin/record.sh --fullscreen-sound # Record screen (with sound)
 bindd = Ctrl, Print, Record region (with sound), exec, ~/.local/bin/record.sh --sound # Record region (with sound)
 
-# bindd = Super, PRINT, Record screen (with sound), exec, ~/.local/bin/record.sh --fullscreen-sound # Record screen (with sound)
-# bindd = SUPER CTRL, PRINT, Record region (with sound), exec, ~/.local/bin/record.sh --sound # Record region (with sound)
 
 ##################
 ## Color picker ##
 ##################
-bind = Super Shift, C, exec, hyprpicker -a # Pick color (Hex) >> clipboardA
+bind = SUPER SHIFT, C, exec, hyprpicker -a # Pick color (Hex) >> clipboardA
 
 
 #######################
@@ -100,15 +93,12 @@ bind = Super Shift, C, exec, hyprpicker -a # Pick color (Hex) >> clipboardA
 ###########################
 ## Fullscreen screenshot ##
 ###########################
-# bindld = ,Print, Screenshot >> clipboard ,exec,grim - | wl-copy # Screenshot >> clipboard
-
 bindld = SUPER, Y, Screenshot >> clipboard & save, exec, ~/.local/bin/screenshot.sh
+bindld = SUPER SHIFT, Y, Screenshot >> clipboard ,exec,grim - | wl-copy # Screenshot >> clipboard
 
-bindld = SUPER Alt, Y, Screenshot >> clipboard & save, exec, mkdir -p $(xdg-user-dir PICTURES)/Screenshots && grim $(xdg-user-dir PICTURES)/Screenshots/Screenshot_"$(date '+%Y-%m-%d_%H.%M.%S')".png && notify-send "" # Screenshot >> clipboard & file
-
-bindle = SUPER, bracketleft, exec, ~/.local/bin/nightlight.sh --dec
-bindle = SUPER, bracketright, exec, ~/.local/bin/nightlight.sh --inc
-binde = SUPER, backslash, exec, ~/.local/bin/nightlight.sh --def
+# bindle = SUPER, bracketleft, exec, 
+# bindle = SUPER, bracketright, exec,
+# binde = SUPER, backslash, exec, 
 
 # ./nightlight.sh --inc     # Increase temp
 # ./nightlight.sh --dec     # Decrease temp
@@ -116,29 +106,24 @@ binde = SUPER, backslash, exec, ~/.local/bin/nightlight.sh --def
 # ./nightlight.sh --def     # Reset to default and stop hyprsunset
 
 
-##! Screen
-# Zoom
-# binde = Super, Minus, exec, ~/.local/bin/zoom.sh decrease 0.1 # Zoom out
-# binde = Super, Equal, exec, ~/.local/bin/zoom.sh increase 0.1 # Zoom in
-
 ##! Session
-bindl = Super, L, exec, loginctl lock-session # Lock
+bindl = SUPER, L, exec, loginctl lock-session # Lock
 # bindl = SUPER SHIFT, L, exec, systemctl poweroff || loginctl poweroff
 bind = Ctrl Alt, Delete, exec, wlogout
 
-#######################
-## Window Management ##
-#######################
-#/# bind = Super, ←/↑/→/↓
-bind = Super, Left, movefocus, l # [hidden]
-bind = Super, Right, movefocus, r # [hidden]
-bind = Super, Up, movefocus, u # [hidden]
-bind = Super, Down, movefocus, d # [hidden]
+# ----------------------
+##! Window Management 
+# ----------------------
+#/# bind = SUPER, ←/↑/→/↓
+bind = SUPER, Left, movefocus, l # [hidden]
+bind = SUPER, Right, movefocus, r # [hidden]
+bind = SUPER, Up, movefocus, u # [hidden]
+bind = SUPER, Down, movefocus, d # [hidden]
 
-bindm = Super, mouse:272, movewindow
-bindm = Super, mouse:273, resizewindow
+bindm = SUPER, mouse:272, movewindow
+bindm = SUPER, mouse:273, resizewindow
 
-bind = Super, Q, killactive,
+bind = SUPER, Q, killactive,
 bind = SUPER SHIFT, Q, exec, hyprctl kill # Pick and kill a window
 
 ################################
@@ -149,100 +134,112 @@ bind = SUPER SHIFT, L, movefocus, r # [hidden]
 bind = SUPER SHIFT, K, movefocus, u # [hidden]
 bind = SUPER SHIFT, J, movefocus, d # [hidden]
 
+# ----------------------
 ##! Window arrangement
-#/# bind = Super+Shift, ←/↑/→/↓,, # Window: move in direction
+# ----------------------
+#/# bind = SUPER+SHIFT, ←/↑/→/↓,, # Window: move in direction
 bind = SUPER SHIFT, Left, movewindow, l # [hidden]
 bind = SUPER SHIFT, Right, movewindow, r # [hidden]
 bind = SUPER SHIFT, Up, movewindow, u # [hidden]
 bind = SUPER SHIFT, Down, movewindow, d # [hidden]
 
 # Window split ratio
-#/# binde = Super, +/-,, # Window: split ratio +/- 0.1
-binde = Super, Minus, splitratio, -0.1 # [hidden]
-binde = Super, Equal, splitratio, +0.1 # [hidden]
+#/# binde = SUPER, +/-,, # Window: split ratio +/- 0.1
+binde = SUPER, Minus, splitratio, -0.1 # [hidden]
+binde = SUPER, Equal, splitratio, +0.1 # [hidden]
 
 # Positioning mode
-bind = Super+Alt, Space, togglefloating,
-bindr = Super, F, fullscreen, 0
+bind = SUPER Alt, Space, togglefloating,
+bindr = SUPER, F, fullscreen, 0
 
-
+# ------------------------
 ##! Workspace navigation
-#/# bind = Ctrl+Super, ←/→,, # Workspace: focus left/right
-bind = Ctrl+Super, Right, workspace, r+1 # [hidden]
-bind = Ctrl+Super, Left, workspace, r-1 # [hidden]
-#/# bind = Ctrl+Super+Alt, ←/→,, # Workspace: focus non-empty left/right
-bind = Ctrl+Super+Alt, Right, workspace, m+1 # [hidden]
-bind = Ctrl+Super+Alt, Left, workspace, m-1 # [hidden]
-#/# bind = Super, Page_↑/↓,, # Workspace: focus left/right
-bind = Super, Page_Down, workspace, +1 # [hidden]
-bind = Super, Page_Up, workspace, -1 # [hidden]
-bind = Ctrl+Super, Page_Down, workspace, r+1 # [hidden]
-bind = Ctrl+Super, Page_Up, workspace, r-1 # [hidden]
+# ------------------------
+#/# bind = Ctrl+SUPER, ←/→,, # Workspace: focus left/right
+bind = Ctrl+SUPER, Right, workspace, r+1 # [hidden]
+bind = Ctrl+SUPER, Left, workspace, r-1 # [hidden]
+
+#/# bind = Ctrl+SUPER+Alt, ←/→,, # Workspace: focus non-empty left/right
+bind = Ctrl+SUPER+Alt, Right, workspace, m+1 # [hidden]
+bind = Ctrl+SUPER+Alt, Left, workspace, m-1 # [hidden]
+
+#/# bind = SUPER, Page_↑/↓,, # Workspace: focus left/right
+bind = SUPER, Page_Down, workspace, +1 # [hidden]
+bind = SUPER, Page_Up, workspace, -1 # [hidden]
+bind = Ctrl+SUPER, Page_Down, workspace, r+1 # [hidden]
+bind = Ctrl+SUPER, Page_Up, workspace, r-1 # [hidden]
 
 
+# ------------------------
 ##! Workspace management
-# Switch workspaces with Super + [0-5]
-bind = Super, 1, workspace, 1
-bind = Super, 2, workspace, 2
-bind = Super, 3, workspace, 3
-bind = Super, 4, workspace, 4
-bind = Super, 5, workspace, 5
-bind = Super, 6, workspace, 6
-bind = Super, 7, workspace, 7
-bind = Super, 8, workspace, 8
-bind = Super, 9, workspace, 9
-bind = Super, 0, workspace, 10
+# ------------------------
+# Switch workspaces with SUPER + [0-5]
+bind = SUPER, 1, workspace, 1
+bind = SUPER, 2, workspace, 2
+bind = SUPER, 3, workspace, 3
+bind = SUPER, 4, workspace, 4
+bind = SUPER, 5, workspace, 5
+bind = SUPER, 6, workspace, 6
+bind = SUPER, 7, workspace, 7
+bind = SUPER, 8, workspace, 8
+bind = SUPER, 9, workspace, 9
+bind = SUPER, 0, workspace, 10
 
-# Move active window to a workspace with Super + SHIFT + [0-9]
-bind = Super Alt, 1, movetoworkspacesilent, 1
-bind = Super Alt, 2, movetoworkspacesilent, 2
-bind = Super Alt, 3, movetoworkspacesilent, 3
-bind = Super Alt, 4, movetoworkspacesilent, 4
-bind = Super Alt, 5, movetoworkspacesilent, 5
-bind = Super Alt, 6, movetoworkspacesilent, 6
-bind = Super Alt, 7, movetoworkspacesilent, 7
-bind = Super Alt, 8, movetoworkspacesilent, 8
-bind = Super Alt, 9, movetoworkspacesilent, 9
-bind = Super Alt, 0, movetoworkspacesilent, 10
+# Move active window to a workspace with SUPER + SHIFT + [0-9]
+bind = SUPER Alt, 1, movetoworkspacesilent, 1
+bind = SUPER Alt, 2, movetoworkspacesilent, 2
+bind = SUPER Alt, 3, movetoworkspacesilent, 3
+bind = SUPER Alt, 4, movetoworkspacesilent, 4
+bind = SUPER Alt, 5, movetoworkspacesilent, 5
+bind = SUPER Alt, 6, movetoworkspacesilent, 6
+bind = SUPER Alt, 7, movetoworkspacesilent, 7
+bind = SUPER Alt, 8, movetoworkspacesilent, 8
+bind = SUPER Alt, 9, movetoworkspacesilent, 9
+bind = SUPER Alt, 0, movetoworkspacesilent, 10
 
 
-#/# bind = Super+Alt, Hash,, # Window: move to workspace # (1, 2, 3, 4, ...)
-bind = Ctrl Super Shift, Up, movetoworkspacesilent, special # [hidden]
+#/# bind = SUPER+Alt, Hash,, # Window: move to workspace # (1, 2, 3, 4, ...)
+bind = Ctrl SUPER SHIFT, Up, movetoworkspacesilent, special # [hidden]
 
-bind = Ctrl Super Shift, Right, movetoworkspace, r+1 # [hidden]
-bind = Ctrl Super Shift, Left, movetoworkspace, r-1 # [hidden]
+bind = Ctrl SUPER SHIFT, Right, movetoworkspace, r+1 # [hidden]
+bind = Ctrl SUPER SHIFT, Left, movetoworkspace, r-1 # [hidden]
 
-bind = Ctrl Super, Up, workspace, r-5 # [hidden]
-bind = Ctrl Super, Down, workspace, r+5 # [hidden]
+bind = Ctrl SUPER, Up, workspace, r-5 # [hidden]
+bind = Ctrl SUPER, Down, workspace, r+5 # [hidden]
 
-#/# bind = Super+Shift, Scroll ↑/↓,, # Window: move to workspace left/right
-bind = Super+Shift, mouse_down, movetoworkspace, r-1 # [hidden]
-bind = Super+Shift, mouse_up, movetoworkspace, r+1 # [hidden]
-bind = Super+Alt, mouse_down, movetoworkspace, -1 # [hidden]
-bind = Super+Alt, mouse_up, movetoworkspace, +1 # [hidden]
+#/# bind = SUPER+SHIFT, Scroll ↑/↓,, # Window: move to workspace left/right
+bind = SUPER SHIFT, mouse_down, movetoworkspace, r-1 # [hidden]
+bind = SUPER SHIFT, mouse_up, movetoworkspace, r+1 # [hidden]
+bind = SUPER Alt, mouse_down, movetoworkspace, -1 # [hidden]
+bind = SUPER Alt, mouse_up, movetoworkspace, +1 # [hidden]
+             
+#/# bind = S UPER+SHIFT, Page_↑/↓,, # Window: move to workspace left/right
+bind = SUPER Alt, Page_Down, movetoworkspace, +1 # [hidden]
+bind = SUPER Alt, Page_Up, movetoworkspace, -1 # [hidden]
+bind = SUPER SHIFT, Page_Down, movetoworkspace, r+1  # [hidden]
+bind = SUPER SHIFT, Page_Up, movetoworkspace, r-1  # [hidden]
+bind = SUPER Alt, S, movetoworkspacesilent, special
 
-#/# bind = Super+Shift, Page_↑/↓,, # Window: move to workspace left/right
-bind = Super+Alt, Page_Down, movetoworkspace, +1 # [hidden]
-bind = Super+Alt, Page_Up, movetoworkspace, -1 # [hidden]
-bind = Super+Shift, Page_Down, movetoworkspace, r+1  # [hidden]
-bind = Super+Shift, Page_Up, movetoworkspace, r-1  # [hidden]
-bind = Super+Alt, S, movetoworkspacesilent, special
+# ---------------------
+##! My Apps Keybinds
+# ---------------------
+bind = SUPER, Return, exec, ghostty     # Launch Terminal
 
-##! - My Apps Keybinds
-bind = Super, Return, exec, kitty # Launch Terminal
-bind = Super, E, exec, nautilus --new-window # Launch Nautilus
-bind = Super, Z, exec, zen-browser # Launch zen-browser
-bind = Super Shift, F, exec, firefox # Launch firefox
+bind = SUPER, S, exec, spotify-launcher #Launch spotify
+bind = SUPER, Z, exec, zen-browser      # Launch zen-browser
+bind = SUPER SHIFT, F, exec, firefox    # Launch firefox
 
-bind = Super, S, exec, spotify-launcher #Launch spotify
-bind = Super, X, exec, gnome-text-editor --new-window # Launch GNOME Text Editor
-bind = Super, T, exec, qbittorrent # Launch qbittorrent
-bind = Super, O, exec, obsidian # Launch Obsidian
+bind = SUPER, E, exec, nautilus --new-window # Launch Nautilus
+bind = SUPER, C, exec, gedit # Launch GNOME Text Editor
 
-bind = SUPER, M, exec, $menu # Launch Rofi Menu
+bind = SUPER, O, exec, obsidian # Launch Obsidian
+bind = SUPER, T, exec, qbittorrent # Launch qbittorrent
 
-# Settings ----------------------------------------------
+# bind = SUPER, M, exec, $menu # Launch Rofi Menu
+
+# -------------
+##! Settings 
+# -------------
 bind = SUPER, B, exec, blueman-manager # Launch Bluetooth-Manager
 bind = SUPER, N, exec, kitty --class nmtui-settings nmtui
 bind = SUPER, V, exec, pavucontrol # Launch pavucontrol (volume mixer)
-
