task: ignore gtk themes

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@ config/.config/hypr/hyprpaper.conf
 config/.config/hypr_caelestia/scheme/current.conf
 
 # Ignore gtk themes
-# config/.config/gtk-3.0/
-# config/.config/gtk-4.0/
+config/.config/gtk-3.0/
+config/.config/gtk-4.0/
