--- a/config/.config/ghostty/config
+++ b/config/.config/ghostty/config
@@ -5,20 +5,20 @@
 
 # ==========================
 font-family = FiraCode Nerd Font
-font-size = 14
+font-size = 15
 
 background-opacity = 0.9
 
 window-padding-x = 10
 window-padding-y = 10
 
-# [Themes]
-theme = "mellow"
-# theme = "nord-wave"
+# [ Themes ]
+theme = "GruvboxDark"
+# theme = "GruvboxDarkHard"
 # theme = "Mathias"
 # theme = "Builtin Pastel Dark"
 
-# [keybindings]
+# [ Keybindings ]
 keybind = ctrl+space>r=reload_config
 
 keybind = ctrl+space>n=new_window
