--- a/config/.config/hypr/hypr_conf/keybinds.conf
+++ b/config/.config/hypr/hypr_conf/keybinds.conf
@@ -7,20 +7,19 @@
 #           |___/                         
 #-----------------------------------------
 
-# Custom Variables
+# [ Variables ]
 $menu=~/.local/bin/menu.sh
 $help=~/.local/bin/keybinds.sh
 $hist=cliphist list | rofi -dmenu -theme ~/.config/rofi/styles/clipboard.rasi | cliphist decode | wl-copy
 
+$inc = ~/.local/bin/brightness.sh --inc
+$dec = ~/.local/bin/brightness.sh --dec
+
 $volCTRL = ~/.local/bin/volumecontrol.sh
 
-# $wall_select=~/.local/bin/wall_select.sh
-# $wall_select=~/.local/bin/wall_scripts/
+$wall_hypr = ~/.local/bin/wall_scripts/wallpaper.sh
 
-
-####################
-## Audio Controls ##
-####################
+# [ Audio Controls ] 
 # bindl = ,XF86AudioMute, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 0% # [hidden]
 # bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+ # [hidden]
 # bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- # [hidden]
@@ -29,65 +28,44 @@ bindl =, XF86AudioMute, exec, $volCTRL --toggle # toggle audio mute
 bindle =,XF86AudioRaiseVolume, exec, $volCTRL --inc # decrease volume
 bindle =,XF86AudioLowerVolume, exec, $volCTRL --dec # increase volume
 
-#########################
-## Brightness Controls ##
-#########################
-bindle= SUPER, XF86MonBrightnessUp, exec, brightnessctl set '12.75+'
-bindle= SUPER, XF86MonBrightnessDown, exec, brightnessctl set '12.75-'
-
+# [ Brightness Controls ] 
 bindle = , XF86MonBrightnessUp,  exec, $inc
 bindle = , XF86MonBrightnessDown, exec, $dec
 
+bindle= SUPER, XF86MonBrightnessUp, exec, brightnessctl set '12.75+'
+bindle= SUPER, XF86MonBrightnessDown, exec, brightnessctl set '12.75-'
 
-####################
-## Media Controls ##
-####################
+
+# [ Media Controls ]
 bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 
-####################
-## Reload Configs ##
-####################
+# [ Reload Configs ]
 bind = SUPER, R, exec, ~/.local/bin/r_waybar.sh
-bind = SUPER SHIFT, R, exec, ~/.local/bin/r_swww.sh
+bind = SUPER SHIFT, R, exec, hyprctl reload && notify-send "Hyprland Reloaded"
 
 
-###################
-## Rofi Keybinds ##
-###################
+# [ QOL Binds ] 
 bindr = SUPER, SUPER_L, exec, $menu  # Launch Rofi_Menu
 bind = SUPER, SLASH, exec, $help  # Launch Keybind_Hint 
+
 binde = SUPER, H, exec, $hist
 bindr = SUPER ALT, H, exec, cliphist wipe
 
+bind = SUPER SHIFT, C, exec, hyprpicker -a # Pick color (Hex) >> clipboardA
 
-############################
-## Change Wallpaper/Theme ##
-############################
-bind = SUPER, W, exec, $wall_select
-bind = SUPER SHIFT, T, exec, $theme_select
+# [ Change Wallpaper ] 
+bind = SUPER, W, exec, $wall_hypr
 
 
 ######################
 ## Screen Recording ##
 ######################
-bindd = Alt, Print, Record screen (with sound), exec, ~/.local/bin/record.sh --fullscreen-sound # Record screen (with sound)
+bindd = , Print, Record screen (with sound), exec, ~/.local/bin/record.sh --fullscreen-sound # Record screen (with sound)
 bindd = Ctrl, Print, Record region (with sound), exec, ~/.local/bin/record.sh --sound # Record region (with sound)
-
-
-##################
-## Color picker ##
-##################
-bind = SUPER SHIFT, C, exec, hyprpicker -a # Pick color (Hex) >> clipboardA
-
-
-#######################
-## Clipboard History ##
-#######################
-# bind = SUPER, H, exec, cliphist list | rofi -dmenu -theme ~/.config/rofi/themes/rofi-clipboard.rasi | cliphist decode | wl-copy # Clipboard history
 
 
 ###########################
@@ -100,13 +78,10 @@ bindld = SUPER SHIFT, Y, Screenshot >> clipboard ,exec,grim - | wl-copy # Screen
 # bindle = SUPER, bracketright, exec,
 # binde = SUPER, backslash, exec, 
 
-# ./nightlight.sh --inc     # Increase temp
-# ./nightlight.sh --dec     # Decrease temp
-# ./nightlight.sh --value   # Set to 5000K
-# ./nightlight.sh --def     # Reset to default and stop hyprsunset
 
-
+# ------------
 ##! Session
+# ------------
 bindl = SUPER, L, exec, loginctl lock-session # Lock
 # bindl = SUPER SHIFT, L, exec, systemctl poweroff || loginctl poweroff
 bind = Ctrl Alt, Delete, exec, wlogout
@@ -224,6 +199,7 @@ bind = SUPER Alt, S, movetoworkspacesilent, special
 ##! My Apps Keybinds
 # ---------------------
 bind = SUPER, Return, exec, ghostty     # Launch Terminal
+bind = SUPER Alt, Return, exec, kitty     # Launch Terminal
 
 bind = SUPER, S, exec, spotify-launcher #Launch spotify
 bind = SUPER, Z, exec, zen-browser      # Launch zen-browser
