--- a/config/.config/starship.toml
+++ b/config/.config/starship.toml
@@ -35,7 +35,7 @@ color_orange = '#FF6C00'
 color_red = '#FF073A'
 color_yellow = '#FFFF33'
 color_pink = '#FF4DA6'
-color_purple = "#E100FF"
+color_purple = '#E100FF'
 color_black = '#000000'
 color_brown = '#A3384A'
 color_rust = '#B7410E'
@@ -44,91 +44,93 @@ vesper_alt = '#FFB86C'
 
 [os]
 disabled = false
-style = "fg:color_orange"
+style = 'fg:color_orange'
 
 [os.symbols]
-Arch = ""
-# Arch = "󰣇"
-Linux = "󰌽"
-NixOS = ""
+Arch = ''
+# Arch = '󰣇'
+Linux = '󰌽'
+NixOS = ''
 
 [username]
 show_always = true
-style_user = "fg:color_orange"
-style_root = "fg:color_orange"
+style_user = 'fg:color_orange'
+style_root = 'fg:color_orange'
 format = '[ $user ]($style)'
 
 [directory]
-style = "fg:color_yellow"
-format = "[ $path ]($style)"
+style = 'fg:color_yellow'
+format = '[ $path ]($style)'
 truncation_length = 3
-truncation_symbol = "…/"
-home_symbol = " "
+truncation_symbol = '…/'
+home_symbol = ' '
 
 [directory.substitutions]
-"Documents" = "󰈙 "
-"Downloads" = " "
-"Music" = "󰝚 "
-"Pictures" = " "
-"Video" = "󱜏 "
-"Coding" = " "
-"Shared" = " "
-"Public" = " "
+'Documents' = '󰈙 '
+'Downloads' = ' '
+'Music' = '󰝚 '
+'Pictures' = ' '
+'Video' = '󱜏 '
+'Coding' = ' '
+'Shared' = ' '
+'Public' = ' '
 
 [git_branch]
-symbol = ""
-style = "color_blue"
+symbol = ''
+style = 'color_blue'
 format = '[ $symbol $branch]($style)'
 
 [git_status]
-style = "vesper_alt"
-format = "[ $conflicted$untracked$modified$staged$renamed$deleted]($style) [($ahead_behind$stashed)](color_green)"
-conflicted = " "  
-untracked = " "  
-modified  = " "  
-renamed   = " "  
-staged    = " "  
-deleted   = " "  
-stashed   = "≡"
-diverged  = "⇕ "
+style = 'vesper_alt'
+format = '[ $all_status]($style) [$ahead_behind$stashed](color_green)'
+conflicted = '='  
+untracked = '!'  
+modified  = ' '  
+renamed   = '»'  
+staged    = '+'  
+deleted   = ' '  
+stashed   = '≡'
+ahead = '⇡${count}'
+diverged = '⇕⇡${ahead_count}⇣${behind_count}'
+behind = '⇣${count}'
 
 [git_state]
 format = '\([$state( $progress_current/$progress_total)]($style)\) '
-style = "color_pink"
+style = 'color_pink'
 
 [c]
-symbol = " "
+symbol = ' '
 format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_sblue)]($style)'
 
 [cpp]
-symbol = " "
+symbol = ' '
 format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
 
 [rust]
-symbol = ""
+symbol = ''
 format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_rust)]($style)'
 
 [golang]
-symbol = ""
+symbol = ''
 format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_nblue)]($style)'
 
 [python]
-symbol = ""
+symbol = ''
 format = '[[ $symbol( $virtualenv) ](fg:color_fg0 bg:color_blue)]($style)'
 
 [docker_context]
-symbol = ""
-style = "bg:color_bg3"
+symbol = ''
+style = 'bg:color_bg3'
 format = '[[ $symbol( $context) ](fg:#83a598 bg:color_blue)]($style)'
 
 [cmd_duration]
-format = "[ $duration]($style)"
-style = "color_green"
+format = '[ $duration]($style)'
+style = 'color_green'
 
 [character]
-success_symbol = "[❯](color_purple)"
-error_symbol = "[❯](color_red)"
-vimcmd_symbol = "[❮](color_sblue)"
+success_symbol = '[❯](color_purple)'
+error_symbol = '[❯](color_red)'
+vimcmd_symbol = '[❮](color_sblue)'
 
 [battery]
 unknown_symbol = ' 󰣇 '
@@ -138,16 +140,16 @@ discharging_symbol = '💀'
 
 [[battery.display]]
 threshold = 30
-style = "fg:color_red"
+style = 'fg:color_red'
 
 [[battery.display]]
 threshold = 60
-style = "fg:color_sblue"
+style = 'fg:color_sblue'
 
 [[battery.display]]
 threshold = 80
-style = "fg:color_lgreen"
+style = 'fg:color_lgreen'
 
 [[battery.display]]
 threshold = 100
-style = "fg:color_nblue"
+style = 'fg:color_nblue'
