--- a/config/.config/hypr/hypr_conf/keybinds.conf
+++ b/config/.config/hypr/hypr_conf/keybinds.conf
@@ -17,7 +17,7 @@ $dec = ~/.local/bin/brightness.sh --dec
 
 $volCTRL = ~/.local/bin/volumecontrol.sh
 
-$wall_hypr = ~/.local/bin/wallpaper.sh
+$wall_hypr = ~/.local/bin/wall_select_hypr.sh
 
 # [ Audio Controls ] 
 # bindl = ,XF86AudioMute, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 0% # [hidden]
