--- a/config/.config/kitty/kitty.conf
+++ b/config/.config/kitty/kitty.conf
@@ -12,7 +12,7 @@ font_size 15
 window_padding_width 10
 
 # Kitty Theme
-include ./themes/gruvbox_dark.conf
+include ./themes/caelestia.conf
 
 # Cursor 
 cursor_trail 1
