feat: re-wrote decorations/execs/binds

--- a/config/.config/hypr/hypr_conf/decorations.conf
+++ b/config/.config/hypr/hypr_conf/decorations.conf
@@ -1,39 +1,28 @@
 decoration {
-  rounding = 20
-    
-  blur {
-    enabled = true
-    xray = true
-    special = false
-    new_optimizations = true
-    size = 14
-    passes = 4
-    brightness = 1
-    noise = 0.01
-    contrast = 1
-    popups = true
-    popups_ignorealpha = 0.6
-  }
-  
-  # Shadow
-  shadow {
+    rounding = 10
+
+    blur {
       enabled = true
-      ignore_window = true
-      range = 20
-      offset = 0 2
-      render_power = 4
-      color = rgba(0000002A)
-  }
+      xray = false
+      size = 8
+      passes = 2
+      special = false
+      ignore_opacity = true  # Allows opacity blurring
+      new_optimizations = true
+      popups = true
+      input_methods = true
+      contrast = 1
+      # brightness = 1
+      # contrast = 1
+      # noise = 0.01
+      # ignore_opacity = true
+    }
 
-  # Dim
-  dim_inactive = false
-  dim_strength = 0.1
-  dim_special = 0
+    shadow {
+        enabled = true
+        range = 20
+        render_power = 3
+        color = rgba(0000002A)
+    }
+
 }
-
-
-
-# Overview
-#plugin {
-
-#}
