--- a/config/.config/hypr/hypr_conf/execs.conf
+++ b/config/.config/hypr/hypr_conf/execs.conf
@@ -22,8 +22,6 @@ exec-once = udiskie
 #  Lock Screen
 # -------------
 exec-once = hypridle
-exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Some fix idk
-exec-once = dbus-update-activation-environment --all
 
 # [Idle inhibit when audio playing]
 # exec-once = sway-audio-idle-inhibit --ignore-source-outputs cava
@@ -31,8 +29,8 @@ exec-once = dbus-update-activation-environment --all
 # --------------------------
 #  [Notifications] [ Bar ] 
 # --------------------------
-# exec-once = waybar
-# exec-once = dunst
+exec-once = waybar
+exec-once = swaync
 
 # ------------------------
 #  [Clipboard: history] 
@@ -43,9 +41,19 @@ exec-once = wl-paste --type image --watch cliphist store
 # -------------
 #   [Cursor] 
 # -------------
-exec-once = hyprctl setcursor Bibata-Modern-Ice 34
-exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
-exec-once = gsettings set org.gnome.desktop.interface cursor-size 34
+$GTK_THEME = adw-gtk3-dark
+$ICON_THEME = Tela-black
+$COLOR_SCHEME = prefer-dark
+$CURSOR_THEME = Bibata-Modern-Classic
+
+exec-once = hyprctl setcursor $CURSOR_THEME 35
+
+exec = gsettings set org.gnome.desktop.interface cursor-theme '$CURSOR_THEME'
+exec = gsettings set org.gnome.desktop.interface cursor-size 35
+
+exec = gsettings set org.gnome.desktop.interface icon-theme $ICON_THEME
+exec = gsettings set org.gnome.desktop.interface gtk-theme $GTK_THEME
+exec = gsettings set org.gnome.desktop.interface color-scheme $COLOR_SCHEME
 
 # ------------
 #  Wallpapers
