--- a/config/.config/hypr/hypr_conf/keybinds.conf
+++ b/config/.config/hypr/hypr_conf/keybinds.conf
@@ -212,11 +212,9 @@ bind = SUPER, C, exec, gedit # Launch GNOME Text Editor
 bind = SUPER, O, exec, obsidian # Launch Obsidian
 bind = SUPER, T, exec, qbittorrent # Launch qbittorrent
 
-# bind = SUPER, M, exec, $menu # Launch Rofi Menu
-
 # -------------
 ##! Settings 
 # -------------
 bind = SUPER, B, exec, blueman-manager # Launch Bluetooth-Manager
-bind = SUPER, N, exec, kitty --class nmtui-settings nmtui
+bind = SUPER, N, exec, kitty --class nmtui-popup nmtui
 bind = SUPER, V, exec, pavucontrol # Launch pavucontrol (volume mixer)
