--- a/config/.config/hypr/hypr_conf/rules.conf
+++ b/config/.config/hypr/hypr_conf/rules.conf
@@ -6,8 +6,9 @@
 #  |_| \_\\___/|_____|_____|____/ 
 #
 # ---------------------------------
+windowrule = opaque, class:foot|equibop|kitty  # They use native transparency
 
-# Disable blur for XWayland windows (or context menus with shadow would look weird)
+# Disable blur for XWayland windows 
 windowrulev2 = noblur, xwayland:1
 
 ######################
@@ -29,17 +30,10 @@ windowrulev2 = float, class:^(blueman-manager)$
 windowrulev2 = center, class:^(blueman-manager)$
 windowrulev2 = size 800 600, class:^(blueman-manager)$  # Adjust size as needed
 
-#################
-## nmtui-popup ##
-#################
+# [ nmtui-popup ]
 windowrulev2 = float, class:^nmtui-popup$
 windowrulev2 = center, class:^nmtui-popup$
 windowrulev2 = size 70% 70%, class:^nmtui-popup$
-
-# [ Center nmtui (adjust width/height as needed) ]
-windowrulev2 = float, class:^nmtui-settings$
-windowrulev2 = center, class:^nmtui-settings$
-windowrulev2 = size 70% 70%, class:^nmtui-settings$
 
 # [ Steam ]
 windowrule = rounding 10, title:, class:steam
@@ -82,8 +76,8 @@ windowrulev2 = noshadow, floating:0
 
 # ------ Workspace rules ------
 workspace = special:special, gapsout:30
-workspace = w[tv1]s[false], gapsout:20, gapsin:20
-workspace = f[1]s[false], gapsout:20, gapsin:20
+workspace = w[tv1]s[false], gapsout:10,
+workspace = f[1]s[false], gapsout:10, 
 
 #################
 ## Layer rules ##
@@ -100,20 +94,27 @@ layerrule = blur, notifications
 layerrule = ignorealpha 0.69, notifications
 layerrule = blur, logout_dialog # wlogout
 
+# --------------
+#  Transparency  
+# --------------          
+$in = 0.85
+$out = 0.90
+
+windowrule = opacity 0.85 $out,class:^(kitty)$
+windowrule = opacity $in $out,class:^(com.mitchellh.ghostty)$
+
+windowrule = opacity 0.90 0.80,class:^(zen)$
+windowrule = opacity $in $out,class:^(org.gnome.Nautilus)$
+windowrule = opacity $in $out,class:^(spotify)$
+windowrule = opacity $in $out,class:^(obsidian)$
+
+# [ Blur for Waybar]
+layerrule = blur, waybar
+layerrule = ignorezero, waybar
+layerrule = ignorealpha 0.5, waybar
+
 # [Swaync Tweak for blur]
 layerrule = blur, swaync-control-center
 layerrule = blur, swaync-notification-window
 layerrule = ignorealpha 0.5, swaync-control-center
 layerrule = ignorealpha 0.5, swaync-notification-window
-
-# --------------
-#  Transparency  
-# --------------          
-$out = 0.30
-
-windowrule = opacity 0.85 $out,class:^(kitty)$
-#windowrule = opacity 0.90 $out,class:^(com.mitchellh.ghostty)$
-windowrule = opacity 0.85 0.80,class:^(zen)$
-windowrule = opacity 0.85 $out,class:^(org.gnome.Nautilus)$
-windowrule = opacity 0.85 $out,class:^(spotify)$
-windowrule = opacity 0.85 $out,class:^(obsidian)$
