feat: changed to nmtui

--- a/config/.config/swaync/config.json
+++ b/config/.config/swaync/config.json
@@ -76,7 +76,7 @@
         },
         {
           "label": " ",
-          "command": "nm-connection-editor"
+          "command": "kitty --class nmtui-popup nmtui"
         },
         {
           "label": "󰂯",
