--- a/config/.config/hypr_caelestia/hyprland/execs.conf
+++ b/config/.config/hypr_caelestia/hyprland/execs.conf
@@ -14,11 +14,11 @@ exec-once = wl-paste --type image --watch cliphist store
 exec-once = trash-empty 30
 
 # Cursors
-exec-once = hyprctl setcursor Bibata-Mordern-Ice 34
+exec = hyprctl setcursor Bibata-Mordern-Ice 34
 
 # Start shell
-# exec-once = caelestia shell -d
-exec-once = qs -c caelestia
+exec-once = caelestia shell -d
+# exec-once = qs -c caelestia
 
 # Resize and move picture in picture windows
 exec-once = caelestia pip -d
