--- a/config/.config/hypr/hyprland.conf
+++ b/config/.config/hypr/hyprland.conf
@@ -15,10 +15,10 @@ source = $hypr/rules.conf
 # --------------
 #  DECOR/COLORS
 # --------------
-source = $hypr/colors.conf
-#source = $hypr/alt_colors.conf
+# source = $hypr/colors.conf
+source = $hypr/alt_colors.conf
 source = $hypr/decorations.conf
-source = $hypr/animations/default.conf
+source = $hypr/animations/lime.conf
 
 # -------
 #   END
