--- a/config/.config/hypr/hypr_conf/alt_colors.conf
+++ b/config/.config/hypr/hypr_conf/alt_colors.conf
@@ -1,5 +1,5 @@
 general{
-    col.active_border = rgb(475437) rgb(d79921) rgb(ffffff) rgb(458588) 
+    col.active_border = rgb(cc241d) rgb(458588) rgb(ebdbb2) rgb(d79921) rgb(b16286)
     col.inactive_border = rgba(282828ee)
 }
 
