--- a/config/.config/hypr_caelestia/hyprland/execs.conf
+++ b/config/.config/hypr_caelestia/hyprland/execs.conf
@@ -13,12 +13,9 @@ exec-once = wl-paste --type image --watch cliphist store
 # Auto delete trash 30 days old
 exec-once = trash-empty 30
 
-# Cursors
-exec = hyprctl setcursor Bibata-Mordern-Ice 34
-
 # Start shell
-exec-once = caelestia shell -d
-# exec-once = qs -c caelestia
+# exec-once = caelestia shell -d
+exec-once = qs -c caelestia
 
 # Resize and move picture in picture windows
 exec-once = caelestia pip -d
@@ -34,3 +31,21 @@ exec-once = hypridle
 
 # Wayvibes
 exec-once = wayvibes ~/.config/key-sounds/akko_lavender_purples -v 8 --background
+
+# [ Cursors ]
+exec = hyprctl setcursor Bibata-Mordern-Ice 34
+
+# [ GTK_THEME ]
+$GTK_THEME = adw-gtk3-dark
+$ICON_THEME = Tela-black
+$COLOR_SCHEME = prefer-dark
+$CURSOR_THEME = Bibata-Modern-Classic
+
+exec-once = hyprctl setcursor $CURSOR_THEME 35
+
+exec = gsettings set org.gnome.desktop.interface cursor-theme '$CURSOR_THEME'
+exec = gsettings set org.gnome.desktop.interface cursor-size 35
+
+exec = gsettings set org.gnome.desktop.interface icon-theme $ICON_THEME
+exec = gsettings set org.gnome.desktop.interface gtk-theme $GTK_THEME
+exec = gsettings set org.gnome.desktop.interface color-scheme $COLOR_SCHEME
