task: add spiectify

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,7 @@ config/.config/hypr/hyprpaper.conf
 
 config/.config/hypr_caelestia/scheme/current.conf
 
-config/.config/starship_bak
-config/.config/starship.toml_bak
-
-# Ignore gtk themes
-config/.config/gtk-3.0/
-config/.config/gtk-4.0/
+# [ Spicetify ]
+config/.config/spicetify/*
+!config/.config/spicetify/Themes
+!config/.config/spicetify/Themes/**
