--- a/config/.config/hypr_caelestia/hyprland/execs.conf
+++ b/config/.config/hypr_caelestia/hyprland/execs.conf
@@ -4,7 +4,7 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 # Location provider and night light
 exec-once = /usr/lib/geoclue-2.0/demos/agent
-exec-once = sleep 1 && gammastep
+exec-once = sleep 2 && gammastep
 
 # Clipboard history
 exec-once = wl-paste --type text --watch cliphist store
@@ -32,20 +32,17 @@ exec-once = hypridle
 # Wayvibes
 exec-once = wayvibes ~/.config/key-sounds/akko_lavender_purples -v 8 --background
 
-# [ Cursors ]
-exec = hyprctl setcursor Bibata-Mordern-Ice 34
-
 # [ GTK_THEME ]
 $GTK_THEME = adw-gtk3-dark
 $ICON_THEME = Tela-black
 $COLOR_SCHEME = prefer-dark
 $CURSOR_THEME = Bibata-Modern-Classic
 
-exec-once = hyprctl setcursor $CURSOR_THEME 35
+exec = sleep 2 && hyprctl setcursor $CURSOR_THEME 34
+             
+exec = sleep 2 && gsettings set org.gnome.desktop.interface cursor-theme '$CURSOR_THEME'
+exec = sleep 2 && gsettings set org.gnome.desktop.interface cursor-size 34
 
-exec = gsettings set org.gnome.desktop.interface cursor-theme '$CURSOR_THEME'
-exec = gsettings set org.gnome.desktop.interface cursor-size 35
-
-exec = gsettings set org.gnome.desktop.interface icon-theme $ICON_THEME
-exec = gsettings set org.gnome.desktop.interface gtk-theme $GTK_THEME
-exec = gsettings set org.gnome.desktop.interface color-scheme $COLOR_SCHEME
+exec = sleep 2 && gsettings set org.gnome.desktop.interface icon-theme $ICON_THEME
+exec = sleep 2 && gsettings set org.gnome.desktop.interface gtk-theme $GTK_THEME
+exec = sleep 2 && gsettings set org.gnome.desktop.interface color-scheme $COLOR_SCHEME
