--- a/config/.config/hypr_caelestia/hyprland/keybinds.conf
+++ b/config/.config/hypr_caelestia/hyprland/keybinds.conf
@@ -91,8 +91,8 @@ bind = SUPER Alt, mouse_up, movetoworkspace,  1
 bind = SUPER SHIFT, S, exec, caelestia toggle specialws
 bind = Ctrl SHIFT, Escape, exec, caelestia toggle sysmon #Btop
 bind = SUPER, M, exec, caelestia toggle music # Spotify
-# bind = Super, D, exec, caelestia toggle communication # Discord
-bind = SUPER, R, exec, caelestia toggle todo #¯\_(ツ)_/¯
+bind = Super, C, exec, caelestia toggle communication # elecwhat
+bind = SUPER, R, exec, caelestia toggle todo # ¯\_(ツ)_/¯
 
 # -----------------------------------------
 #   Move Window to/from Special Workspace
