--- a/config/.config/spotify-flags.conf
+++ b/config/.config/spotify-flags.conf
@@ -1,1 +1,3 @@
- --ozone-platform-hint=wayland
+--enable-features=UseOzonePlatform,WaylandWindowDecorations
+--ozone-platform=wayland
+--ozone-platform-hint=auto
