task: main hypr config for my dots

--- a/config/.config/hypr_main/hypr_conf/keybinds.conf
+++ b/config/.config/hypr_main/hypr_conf/keybinds.conf
@@ -202,9 +202,8 @@ bind = SUPER Alt, S, movetoworkspacesilent, special
 bind = SUPER, Return, exec, ghostty     # Launch Terminal
 bind = SUPER Alt, Return, exec, kitty     # Launch Terminal
 
-bind = SUPER, S, exec, spotify-launcher #Launch spotify
-bind = SUPER, Z, exec, zen-browser      # Launch zen-browser
-bind = SUPER SHIFT, F, exec, firefox    # Launch firefox
+bind = SUPER, S, exec, spotify #Launch spotify
+bind = SUPER, Z, exec, zen-browser || firefox      # Launch zen-browser
 
 bind = SUPER, E, exec, nautilus --new-window # Launch Nautilus
 bind = SUPER, C, exec, gedit # Launch GNOME Text Editor
