--- a/config/.config/hypr_main/hypr_conf/rules.conf
+++ b/config/.config/hypr_main/hypr_conf/rules.conf
@@ -11,19 +11,24 @@ windowrule = opaque, class:foot|equibop|kitty  # They use native transparency
 # Disable blur for XWayland windows 
 windowrulev2 = noblur, xwayland:1
 
-######################
-## Floating Windows ##
-######################
+# ------------------------
+## [  Floating Windows ]
+# ------------------------
 windowrulev2 = float, class:^(steam)$
-windowrulev2 = float, class:^(pavucontrol)$
-windowrulev2 = size 45%, class:^(pavucontrol)$
-windowrulev2 = center, class:^(pavucontrol)$
-windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = size 45%, class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = center, class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = float, class:^(nm-connection-editor)$
-windowrulev2 = size 45%, class:^(nm-connection-editor)$
-windowrulev2 = center, class:^(nm-connection-editor)$
+
+windowrule = float, class:foot, title:nmtui
+windowrule = size 75% 70%, class:foot, title:nmtui
+windowrule = center 1, class:foot, title:nmtui
+windowrule = float, class:org\.gnome\.Settings
+windowrule = size 70% 80%, class:org\.gnome\.Settings
+windowrule = center 1, class:org\.gnome\.Settings
+windowrule = float, class:org\.pulseaudio\.pavucontrol|yad-icon-browser
+windowrule = size 60% 70%, class:org\.pulseaudio\.pavucontrol|yad-icon-browser
+windowrule = center 1, class:org\.pulseaudio\.pavucontrol|yad-icon-browser
+windowrule = float, class:nwg-look
+windowrule = size 50% 60%, class:nwg-look
+windowrule = center 1, class:nwg-look
+
 
 # Blueman (Bluetooth Manager) - Center + Float
 windowrulev2 = float, class:^(blueman-manager)$
@@ -41,18 +46,13 @@ windowrule = float, title:Friends List, class:steam
 windowrule = immediate, class:steam_app_[0-9]+  # Allow tearing for steam games
 windowrule = idleinhibit always, class:steam_app_[0-9]+  # Always idle inhibit when playing a steam game
 
-#######################
-## Picture-in-Picture##
-#######################
+# [ Picture-in-Picture ]
 windowrulev2 = float, title:^(Picture-in-Picture|PiP)$
 windowrulev2 = pin, title:^(Picture-in-Picture|PiP)$  # Keeps it above other windows (optional)
 windowrulev2 = move 75%-25 75%-25, title:^(Picture-in-Picture|PiP)$  # Bottom-right (adjust offsets)
 windowrulev2 = size 25% 25%, title:^(Picture-in-Picture|PiP)$  # Default size (adjust % as needed)
 
-
-####################
-## Dialog Windows ##
-####################
+# [ Dialog Windows ]
 windowrulev2 = float, class:^(.*)$, title:^(Open File|Select a File|Save As|File Upload|Open Folder|Library)(.*)$
 windowrulev2 = center, class:^(.*)$, title:^(Open File|Select a File|Save As|File Upload|Open Folder|Library)(.*)$
 windowrulev2 = size 800 600, class:^(.*)$, title:^(Open File|Select a File|Save As|File Upload|Open Folder|Library)(.*)$
