task: hypr config for caelestia

--- a/config/.config/hypr_caelestia/hypr-user.conf
+++ b/config/.config/hypr_caelestia/hypr-user.conf
@@ -8,7 +8,7 @@ bind = SUPER Alt, H, exec, cliphist wipe # Purge clipboard history
 #  Launch Apps
 # --------------
 bind = SUPER, Z, exec, app2unit -- zen-browser || firefox
-bind = SUPER, S, exec, app2unit -- spotify-launcher
+bind = SUPER, S, exec, app2unit -- spotify || spotify-launcher
 bind = SUPER, O, exec, app2unit -- obsidian
 
 bind = SUPER, Return, exec, app2unit -- ghostty
