--- a/config/.config/hypr_caelestia/hyprland/rules.conf
+++ b/config/.config/hypr_caelestia/hyprland/rules.conf
@@ -41,7 +41,7 @@ windowrule = center 1, class:nwg-look
 # Special workspaces
 windowrule = workspace special:sysmon, class:btop
 windowrule = workspace special:music, class:spotify
-# windowrule = workspace special:music, initialTitle:Spotify( Free)?  # Spotify wayland, it has no class for some reason
+windowrule = workspace special:music, initialTitle:Spotify( Premium)?  # Spotify wayland, it has no class for some reason
 windowrule = workspace special:communication, class:elecwhat|discord|equibop|vesktop|whatsapp
 windowrule = workspace special:todo, class:Todoist
 
