--- a/config/.config/hypr_main/hyprlock/hyprlock-1.conf
+++ b/config/.config/hypr_main/hyprlock/hyprlock-1.conf
@@ -1,119 +1,152 @@
-# variables
-
 background {
     monitor =
-    path = $HOME/.config/hypr/.cache/current_wallpaper.png   # only png supported for now
+    path = ~/.config/hypr/hyprlock/bg_02.jpg
     blur_passes = 2
-    contrast = 1
-    brightness = 0.9
-    vibrancy = 1
+    contrast = 0.8916
+    brightness = 0.8172
+    vibrancy = 0.1696
     vibrancy_darkness = 0.0
 }
 
 # GENERAL
 general {
     no_fade_in = false
-    no_fade_out = false
     grace = 0
     disable_loading_bar = false
 }
 
-input-field {
-    monitor =
-    size = 300, 50
-    outline_thickness = 3
-    dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
-    dots_center = true
-    dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = $activeCol
-    inner_color = $activeCol
-    font_color = $inactiveCol
-    fade_on_empty = false
-    fade_timeout = 2000 # Milliseconds before fade_on_empty is triggered.
-    placeholder_text = <i> <span foreground="##000000"> Enter Password...</span> </i>
-    hide_input = false
-    rounding = -1 # -1 means complete rounding (circle/oval)
-    check_color = rgba(d3d4e6FF)
-    fail_color = rgba(255, 0, 0, 1)
-    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
-    fail_transition = 300
-    capslock_color = rgba(d3d4e6FF)
-    numlock_color = rgba(d3d4e6FF)
-    bothlock_color = rgba(d3d4e6FF)
-    invert_numlock = false # changecolor = rgba(d3d4e6FF)
-    swap_font_color = $activeCol
-    position = -40, 40
-    halign = right
-    valign = bottom
-}
-
-# time (hour)
+# Day
 label {
     monitor =
-    text = cmd[update:1000] echo "$(date +'%I')"
-    color = $activeCol
-    font_size = 200
-    font_family = Montserrat Italic Bold
-    position = -50, 250
+    text = cmd[update:1000] echo -e "$(date +"%A")"
+    color = rgba(235, 219, 178, 0.75) 
+    font_size = 90
+    font_family = SF Pro Display Bold
+    position = 0, 350
     halign = center
     valign = center
-    shadow_passes = 5
-    shadow_size = 10
 }
 
-# time (minute)
+# Date-Month
 label {
     monitor =
-    text = cmd[update:1000] echo "$(date +'%M')"
-    color = $activeCol
-    font_size = 170
-    font_family = Montserrat Italic Bold
-    position = 50, 70
-    halign = center
-    valign = center
-    shadow_passes = 5
-    shadow_size = 10
-}
-
-# date
-label {
-    monitor =
-    text = cmd[update:1000] echo "$(date +'%d %B, %Y')"
-    color = $activeCol
-    font_size = 25
-    font_family = Pacifico Regular
-    position = 0, -75
-    halign = center
-    valign = center
-    shadow_passes = 5
-    shadow_size = 10
-}
-
-# user
-label {
-    monitor =
-    text = $USER
-    color = $activeCol
+    text = cmd[update:1000] echo -e "$(date +"%d %B")"
+    color = rgba(235, 219, 178, 0.75)
     font_size = 40
-    font_family = Fira Bold
-    position = -50, 120
-    halign = right
-    valign = bottom
-    shadow_passes = 5
-    shadow_size = 10
+    font_family = SF Pro Display Bold
+    position = 0, 250
+    halign = center
+    valign = center
 }
 
+# Time
+label {
+    monitor =
+    text = cmd[update:1000] echo "<span>$(date +"- %I:%M -")</span>"
+    color = rgba(235, 219, 178, 0.75)
+    font_size = 20
+    font_family = SF Pro Display Bold
+    position = 0, 190
+    halign = center
+    valign = center
+}
+
+# Profile Photo
 image {
     monitor =
-    path = $HOME/.config/hypr/Wallpapers/user.png
-    size = 280 # lesser side if not 1:1 ratio
-    rounding = -1 # negative values mean circle
-    border_size = 8
-    border_color = $activeCol
-    rotate = 0 # degrees, counter-clockwise
-    reload_time = -1 # seconds between reloading, 0 to reload with SIGUSR2
-    position = -45, 190
+    path = ~/.config/hypr/hyprlock/.face
+    border_size = 2
+    border_color = rgba(235, 219, 178, 0.6)
+    size = 200
+    rounding = -1
+    rotate = 0
+    reload_time = -1
+    reload_cmd =
+    position = 0, 40
+    halign = center
+    valign = center
+}
+
+# USER-BOX
+shape {
+    monitor =
+    size = 300, 60
+    color = rgba(60, 56, 54, 0.4)  
+    rounding = -1
+    border_size = 0
+    border_color = rgba(235, 219, 178, 0.0)
+    rotate = 0
+    xray = false
+    position = 0, -130
+    halign = center
+    valign = center
+}
+
+# USER
+label {
+    monitor =
+    text =   Hallo! $USER
+    color = rgba(235, 219, 178, 0.85)
+    outline_thickness = 2
+    font_size = 18
+    font_family = SF Pro Display Bold
+    position = 0, -130
+    halign = center
+    valign = center
+}
+
+# INPUT FIELD
+input-field {
+    monitor =
+    size = 300, 60
+    outline_thickness = 2
+    dots_size = 0.2
+    dots_spacing = 0.2
+    dots_center = true
+    outer_color = rgba(235, 219, 178, 0.0)
+    inner_color = rgba(60, 56, 54, 0.3)  
+    font_color = rgb(235, 219, 178)  
+    fade_on_empty = false
+    font_family = SF Pro Display Bold
+    placeholder_text = <i><span foreground="##ffffff99">🔒 DAMN </span></i>
+    hide_input = false
+    position = 0, -210
+    halign = center
+    valign = center
+}
+
+# Reboot
+label {
+    monitor =
+    text = 󰜉 
+    color = rgba(255, 255, 255, 0.6)
+    font_size = 50
+    onclick = systemctl reboot
+    position = 0, 100
+    halign = center
+    valign = bottom
+}
+
+# Power off
+label {
+    monitor =
+    text = 󰐥 
+    color = rgba(255, 255, 255, 0.6)
+    font_size = 50
+    onclick = shutdown now || systemctl poweroff
+    position = 820, 100
+    halign =left 
+    valign = bottom
+}
+
+# Suspend
+label {
+    monitor =
+    text = 󰤄 
+    color = rgba(255, 255, 255, 0.6)
+    font_size = 50
+    onclick = systemctl suspend
+    position = -820, 100
     halign = right
     valign = bottom
 }
