task: modified config for hypr

--- a/config/.config/hypr_main/hyprland.conf
+++ b/config/.config/hypr_main/hyprland.conf
@@ -11,6 +11,7 @@ source = $hypr/keybinds.conf
 # -----------
 source = $hypr/env.conf
 source = $hypr/rules.conf
+source = ~/.config/hypr/hypr-user.conf
 
 # --------------
 #  DECOR/COLORS
