--- a/config/.config/hypr_main/hyprlock.conf
+++ b/config/.config/hypr_main/hyprlock.conf
@@ -1,4 +1,6 @@
 # ----------------
 # Hyprlock config
 # ----------------
- source=~/.config/hypr/hyprlock/hyprlock-1.conf
+$hypr_lock=~/.config/hypr/hyprlock/
+ 
+source=$hypr_lock/hyprlock-1.conf
