--- a/config/.config/kitty/kitty.conf
+++ b/config/.config/kitty/kitty.conf
@@ -7,12 +7,12 @@ bold_italic_font auto
 
 enable_audio_bell yes
 
-font_size 15
+font_size 14
 
 window_padding_width 10
 
 # Kitty Theme
-include ./themes/caelestia.conf
+include ./themes/gruvbox_dark.conf
 
 # Cursor 
 cursor_trail 1
