task: clean-up - added - modified - cleanup

--- a/config/.config/spicetify/config-xpui.ini
+++ b/config/.config/spicetify/config-xpui.ini
@@ -1,8 +1,8 @@
 [Setting]
 spotify_path           = /opt/spotify/
 prefs_path             = /home/ola-x/.config/spotify/prefs
-current_theme          = Hazy
-color_scheme           = caelestia
+current_theme          = Blackout
+color_scheme           = Blackout
 inject_theme_js        = 1
 inject_css             = 1
 replace_colors         = 1
