--- a/Config/.config/kitty/kitty.conf
+++ b/Config/.config/kitty/kitty.conf
@@ -5,31 +5,34 @@ italic_font      auto
 bold_italic_font auto
 # END_KITTY_FONTS
 
-enable_audio_bell yes
-
 font_size 17
-
-window_padding_width 10
 
 # Kitty Theme
 include ./themes/gruvbox_dark.conf
-
-# Cursor 
-cursor_trail 1
-cursor_blink_interval 0.5
-cursor_stop_blinking_after 13.0
-
 background_opacity 0.80
+window_padding_width 5
+
+# Cursor  # block / beam / underline #39ff14 #00CCFF #ff33cc #000000 #FF073A
+cursor #00CCFF
+cursor_text_color  #000000
+cursor_shape block
+cursor_shape_unfocused hollow
+cursor_blink_interval 0.3
+
+cursor_trail 1
+cursor_trail_start_threshold 1
+cursor_stop_blinking_after 15.0
+cursor_trail_decay 0.3 0.6
+shell_integration no-cursor
+
+copy_on_select yes
 
 allow_remote_control yes
-
 allow_hyperlinks yes
+underline_hyperlinks hover
 
-#hide_window_decorations yes
 confirm_os_window_close 0
-
-# Copy for normies
-map ctrl+c       copy_or_interrupt
+enable_audio_bell yes
 
 # Zoom
 map ctrl+plus  change_font_size all +0
